--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,7 @@
         android:id="@+id/MovieListFragment"
         android:name="com.aap.ro.movies.ui.MovieListFragment"
         android:label="@string/movie_list_fragment_label"
-        tools:layout="@layout/fragment_first">
+        tools:layout="@layout/fragment_movie_list">
 
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
@@ -19,7 +19,7 @@
         android:id="@+id/MovieDetailFragment"
         android:name="com.aap.ro.movies.ui.MovieDetailFragment"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        tools:layout="@layout/fragment_movie_detail">
         <argument
             android:name="@string/movieId"
             app:argType="integer"
@@ -31,6 +31,6 @@
     <fragment
         android:id="@+id/addMovieFragment"
         android:name="com.aap.ro.movies.ui.AddMovieFragment"
-        android:label="fragment_add_movie"
+        android:label="@string/add_movie"
         tools:layout="@layout/fragment_add_movie" />
 </navigation>
