--- a/app/src/main/res/layout/artist_header.xml
+++ b/app/src/main/res/layout/artist_header.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="0dp"
-        android:background="@color/movie_red"
+        android:background="@drawable/header_red_gradient"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
