--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -12,7 +12,21 @@
         android:layout_height="match_parent"
         android:padding="16dp">
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/progress_indicator"
+            android:background="#FFA0A0A0">
 
+            <ProgressBar
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_gravity="center"/>
+        </FrameLayout>
         <TextView
             android:id="@+id/movie_title_with_year"
             android:layout_width="wrap_content"
@@ -66,6 +80,7 @@
             android:id="@+id/delete_movie"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_marginBottom="32dp"
             android:text="@string/delete_movie"
             app:layout_constraintBottom_toBottomOf="parent"
