--- a/app/src/main/res/layout/selectable_artist_row.xml
+++ b/app/src/main/res/layout/selectable_artist_row.xml
@@ -7,7 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:enabled="false"
+        android:enabled="true"
         android:id="@+id/selected"/>
     <TextView
         android:layout_width="wrap_content"
