Added more features Ability to select actors Change the view mode list or grid Fixed the unit tests

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="list_selection_height">32dp</dimen>
+    <dimen name="movie_list_top_margin">40dp</dimen>
 </resources>
