--- a/app/src/main/res/layout/fragment_add_movie.xml
+++ b/app/src/main/res/layout/fragment_add_movie.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".ui.addmovie.AddMovieFragment">
+    tools:context=".ui.addmovie.AddEditMovieFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <EditText
@@ -104,6 +104,17 @@
         android:layout_marginTop="16dp"
         android:text="@string/select_actors"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/genre_list" />
+
+    <TextView
+        android:id="@+id/actor_select_dialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:textColor="@color/clickable_blue"
+        android:text="@string/click_here_to_select_actors"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/genre_list" />
 
 
