--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -57,6 +57,7 @@
             android:layout_height="256dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:transitionName="@string/movie_image"
             android:layout_marginEnd="16dp"
             android:src="@drawable/baseline_local_movies_24"
             app:layout_constraintEnd_toEndOf="parent"
