--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -1,22 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_marginTop="8dp"
+    android:layout_height="@dimen/list_selection_height"
+    android:orientation="horizontal">
 
+    <androidx.appcompat.widget.SwitchCompat
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="8dp"
+        android:id="@+id/view_mode_switcher"
+        android:textOn="@string/list"
+        android:textOff="@string/grid"
+        app:showText="false"
+        android:checked="true"
+        />
+    <ImageView
+        android:layout_marginStart="4dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_gravity="center_vertical"
+        android:id="@+id/mode_icon"
+        android:src="@drawable/toggle_icon_layer"
+        />
+</LinearLayout>
 <androidx.core.widget.NestedScrollView
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="@dimen/movie_list_top_margin"
     android:layout_marginBottom="40dp"
     android:fillViewport="true"
-    tools:context=".ui.MovieListFragment">
+    tools:context=".ui.movielist.MovieListFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp">
-        
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/movie_list"
             android:layout_width="match_parent"
