--- a/app/src/main/res/layout/movie_list_row.xml
+++ b/app/src/main/res/layout/movie_list_row.xml
@@ -11,11 +11,12 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="52dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="0dp"
+        android:layout_width="60dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
+        android:transitionName="@string/movie_image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
