--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,12 +7,17 @@
 
     <fragment
         android:id="@+id/MovieListFragment"
-        android:name="com.aap.ro.movies.ui.MovieListFragment"
+        android:name="com.aap.ro.movies.ui.movielist.MovieListFragment"
         android:label="@string/movie_list_fragment_label"
         tools:layout="@layout/fragment_movie_list">
 
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
+            android:id="@+id/movieDetailFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"
+
             app:destination="@id/movieDetailFragment" />
         <action
             android:id="@+id/action_MovieListFragment_to_addMovieFragment"
@@ -20,9 +25,10 @@
     </fragment>
     <fragment
         android:id="@+id/movieDetailFragment"
-        android:name="com.aap.ro.movies.ui.MovieDetailFragment"
+        android:name="com.aap.ro.movies.ui.detail.MovieDetailFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_movie_detail">
+        <!--suppress NavigationFile -->
         <argument
             android:name="movieId"
             app:argType="integer"
@@ -30,18 +36,18 @@
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
             app:destination="@id/MovieListFragment" />
+        <action
+            android:id="@+id/action_movieDetailFragment_to_addMovieFragment"
+            app:destination="@id/addMovieFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/addMovieFragment"
-        android:name="com.aap.ro.movies.ui.addmovie.AddMovieFragment"
+        android:name="com.aap.ro.movies.ui.addmovie.AddEditMovieFragment"
         android:label="@string/add_movie"
         tools:layout="@layout/fragment_add_movie" >
-        <action
-            android:id="@+id/action_addMovieFragment_to_addGenreDialog"
-            app:destination="@id/addGenreDialog" />
-        <action
-            android:id="@+id/action_addMovieFragment_to_addArtistDialog"
-            app:destination="@id/addArtistDialog" />
+         <!--suppress NavigationFile -->
+
     </fragment>
 
     <dialog android:id="@+id/addGenreDialog"
