--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="dark_background">#1f000000</color>
     <color name="red_200">#ffff7777</color>
     <color name="movie_red">#EA4B4B</color>
+    <color name="clickable_blue">#5555FF</color>
 </resources>
